[tool.poetry]
name = "automated-fundamental-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.8"
tqdm = "4.56.0"
requests = "2.23.0"
numpy = "1.18.4"
pandas = "1.0.5"
beautifulsoup4 = "4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
